# DecisionHub

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/analyze/: analyzer.py
backend/database/: database.py  models.py
backend/src/: Dockerfile  config.py  handlers.py  main.py  service.py
backend/src/analyze/: __init__.py  document_analyzer.py  git_analyzer.py
backend/src/database/: __init__.py  database.py  models.py
backend/src/routers/: service.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/pages/: Login.tsx
frontend/src/pages/Auth/: Login.tsx  Register.tsx
frontend/src/pages/Jury/: JuryPanel.tsx
frontend/src/pages/Organizer/: Leaderboard.tsx
frontend/src/pages/Participant/: Dashboard.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
