[tool.pyright]
venvPath = "."
venv = ".venv"
[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alchemy>=20.5",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "psycopg[binary,pool]>=3.3.4",
    "pypdf>=6.12.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "sqlalchemy>=2.0.50",
]
