[tool.pyright]
venvPath = "."
venv = ".venv"
[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.0",
    "aiosqlite>=0.22.1",
    "alchemy>=20.5",
    "asyncpg>=0.31.0",
    "detect-secrets>=1.5.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "flake8>=7.3.0",
    "gitpython>=3.1.50",
    "loguru>=0.7.3",
    "multidict>=6.7.1",
    "psycopg[binary,pool]>=3.3.4",
    "pylint>=4.0.5",
    "pypdf>=6.12.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "radon>=6.0.1",
    "requests>=2.22.0",
    "sqlalchemy>=2.0.50",
    "urllib3<2",
    "uvicorn>=0.49.0",
    "yt-dlp>=2026.3.17",
]
